chore(tests): trigger deck-integration to run test file change too

--- a/.github/workflows/deck-integration.yml
+++ b/.github/workflows/deck-integration.yml
@@ -10,6 +10,7 @@ on:
     - 'plugins-ee/**/schema.lua'
     - 'kong/db/dao/*.lua'
     - 'kong/api/**/*.lua'
+    - 'spec/06-third-party/01-deck/01-deck-integration_spec.lua'
 
 permissions:
   pull-requests: write
