--- a/changelog/unreleased/kong/ai-proxy-add-allow-override-opt.yml
+++ b/changelog/unreleased/kong/ai-proxy-add-allow-override-opt.yml
@@ -1,4 +1,4 @@
 message: |
-  **AI-proxy-plugin**: Add `allow_auth_override` option to allow overriding the upstream model auth parameter or header from the caller's request.
+  **AI-proxy-plugin**: Add `allow_override` option to allow overriding the upstream model auth parameter or header from the caller's request.
 scope: Plugin
 type: feature
