--- a/changelog/unreleased/kong/fix-dns-initialization.yml
+++ b/changelog/unreleased/kong/fix-dns-initialization.yml
@@ -1,3 +1,3 @@
-message: Removed unnecessary dns initialization
+message: Removed unnecessary DNS client initialization
 type: performance
 scope: Core
