fix(plugins/acme): username/password is a valid authentication method (#13496)
Cherry-pick of https://github.com/Kong/kong/pull/13496

---

Fixed an issue where username and password were not accepted as a valid
authentication method. This is already accepted as valid authentication
method in other plugins that use the shared Redis library such as the
rate-limiting plugin.

Depends on this PR of lua-resty-acme: https://github.com/fffonion/lua-resty-acme/pull/121

Fix FTI-6143

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -408,6 +408,19 @@ jobs:
         ports:
           - 8200:8200
 
+      redis-auth:
+        image: redis/redis-stack-server
+        # Set health checks to wait until redis has started
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6381:6379
+        env:
+          REDIS_ARGS: "--requirepass passdefault"
+
     steps:
     - name: Set up core dumps
       run: |
@@ -458,7 +471,7 @@ jobs:
       with:
         name: build-fips
         path: .
-    
+
     - name: Set permissions in install destination path
       run: |
         sudo chmod 777 /usr/local
