--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -640,6 +640,10 @@ jobs:
         KONG_SPEC_TEST_GRPCBIN_PORT: "15002"
         KONG_SPEC_TEST_GRPCBIN_SSL_PORT: "15003"
         KONG_SPEC_TEST_REDIS_STACK_PORT: "16379"
+        KONG_SPEC_TEST_CONFLUENT_HOST: ${{ secrets.KONG_SPEC_TEST_CONFLUENT_HOST }}
+        KONG_SPEC_TEST_CONFLUENT_PORT: ${{ secrets.KONG_SPEC_TEST_CONFLUENT_PORT }}
+        KONG_SPEC_TEST_CONFLUENT_CLUSTER_API_KEY: ${{ secrets.KONG_SPEC_TEST_CONFLUENT_CLUSTER_API_KEY }}
+        KONG_SPEC_TEST_CONFLUENT_CLUSTER_API_SECRET: ${{ secrets.KONG_SPEC_TEST_CONFLUENT_CLUSTER_API_SECRET }}
         KONG_SPEC_TEST_OTELCOL_FILE_EXPORTER_PATH: ${{ github.workspace }}/tmp/otel/file_exporter.json
         KONG_SPEC_TEST_OLD_VERSION_KONG_PATH: ${{ github.workspace }}/kong-ee-old
         KONG_TEST_LICENSE_DATA: ${{ steps.decrypted_license.outputs.out }}
