--- a/changelog/unreleased/kong/fix-vault-secret-rotation-log-level.yml
+++ b/changelog/unreleased/kong/fix-vault-secret-rotation-log-level.yml
@@ -1,3 +1,3 @@
-message: Erorr logs during Vault secret rotation are now logged at the `notice` level instead of `warn`.
+message: Error logs during Vault secret rotation are now logged at the `notice` level instead of `warn`.
 type: bugfix
 scope: Core
