chore(ci): fix build_and_test metadata (#10082)

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -70,6 +70,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # `git merge-base` requires the history
     - name: Build Info
       id: build-info
       run: |
