fix(plugins/oas-validation): parameter serialization (#9979)
Fixed an issue where parameter serialization does not behave the same as in the OpenAPI specification

FTI-6101 FTI-6170 FTI-6172 FTI-6161 FTI-6178

---------

Co-authored-by: Zachary Hu <6426329+outsinre@users.noreply.github.com>
Co-authored-by: Zhefeng C. <38037704+catbro666@users.noreply.github.com>

--- a/plugins-ee/oas-validation/spec/fixtures/resources/parameter-serialization-oas.yaml
+++ b/plugins-ee/oas-validation/spec/fixtures/resources/parameter-serialization-oas.yaml
@@ -30,6 +30,194 @@ paths:
       responses:
         '200':
           description: successful operation
+  /query:
+    get:
+      summary: query parameter with array schema
+      description: ''
+      parameters:
+        - name: integer_array
+          in: query
+          required: true
+          schema:
+            type: array
+            items:
+              type: integer
+      responses:
+        '200':
+          description: successful operation
+  /query2:
+    get:
+      summary: query parameter with object schema
+      description: ''
+      parameters:
+        - name: obj
+          in: query
+          required: true
+          schema:
+            type: object
+            properties:
+              required_integer:
+                type: integer
+              required_string:
+                type: string
+              boolean:
+                type: boolean
+            required:
+              - required_integer
+              - required_string
+      responses:
+        '200':
+          description: successful operation
+  /query/deepObject:
+    get:
+      summary: query parameter with schema
+      description: ''
+      parameters:
+        - name: deepObject
+          in: query
+          required: true
+          schema:
+            type: object
+            properties:
+              required_integer:
+                type: integer
+              required_string:
+                type: string
+              boolean:
+                type: boolean
+            required:
+              - required_integer
+              - required_string
+          explode: true
+          style: deepObject
+      responses:
+        '200':
+          description: successful operation
+
+  /path/object/{simple_object}:
+    get:
+      summary: path parameter with object schema
+      description: ''
+      parameters:
+        - name: simple_object
+          in: path
+          required: true
+          schema:
+            type: object
+            properties:
+              required_integer:
+                type: integer
+              required_string:
+                type: string
+              boolean:
+                type: boolean
+            required:
+              - required_integer
+              - required_string
+      responses:
+        '200':
+          description: successful operation
+
+  /path/object/{simple_object}/explode:
+    get:
+      summary: path parameter with object schema
+      description: ''
+      parameters:
+        - name: simple_object
+          in: path
+          required: true
+          explode: true
+          schema:
+            type: object
+            properties:
+              required_integer:
+                type: integer
+              required_string:
+                type: string
+              boolean:
+                type: boolean
+            required:
+              - required_integer
+              - required_string
+      responses:
+        '200':
+          description: successful operation
+
+  /path/array/{array}:
+    get:
+      summary: path parameter with array schema
+      description: ''
+      parameters:
+        - name: array
+          in: path
+          required: true
+          schema:
+            type: array
+            items:
+              type: integer
+      responses:
+        '200':
+          description: successful operation
+
+  /header:
+    get:
+      summary: path parameter with array schema
+      description: ''
+      parameters:
+      - in: header
+        name: integer_array
+        schema:
+          type: array
+          items:
+            type: integer
+      - in: header
+        name: obj
+        schema:
+          type: object
+          properties:
+            required_integer:
+              type: integer
+            required_string:
+              type: string
+            boolean:
+              type: boolean
+          required:
+            - required_integer
+            - required_string
+      responses:
+        '200':
+          description: successful operation
+
+  /header/explode:
+    get:
+      summary: path parameter with array schema
+      description: ''
+      parameters:
+        - in: header
+          name: integer_array
+          schema:
+            type: array
+            items:
+              type: integer
+          explode: true
+        - in: header
+          name: obj
+          schema:
+            type: object
+            properties:
+              required_integer:
+                type: integer
+              required_string:
+                type: string
+              boolean:
+                type: boolean
+            required:
+              - required_integer
+              - required_string
+          explode: true
+      responses:
+        '200':
+          description: successful operation
 
 components:
   schemas:
