--- a/changelog/unreleased/kong-ee/fix-ai-semantic-caching-plugin.yml
+++ b/changelog/unreleased/kong-ee/fix-ai-semantic-caching-plugin.yml
@@ -1,3 +1,3 @@
-message: "**ai-semantic-caching:** Fix the `ai-semantic-caching` plugin with a condition for calculating latencies when no embeddings."
+message: "**ai-semantic-caching:** Fix the `ai-semantic-caching` plugin with a condition for calculating latencies when no embeddings, add deep copy for the request table and fix countback."
 type: bugfix
 scope: Plugin
