--- a/changelog/unreleased/kong-ee/ai_analytics_konnect.yml
+++ b/changelog/unreleased/kong-ee/ai_analytics_konnect.yml
@@ -1,3 +1,3 @@
-message: '**analytics**: send AI analtyics to Konnect'
+message: '**analytics**: Added support for also sending cache data of AI analytics to Konnect'
 type: feature
 scope: Core
