--- a/changelog/3.8.0/kong/fix-deprecate-shorthands-precedence.yml
+++ b/changelog/3.8.0/kong/fix-deprecate-shorthands-precedence.yml
@@ -1,3 +1,5 @@
-message: Deprecated shorthand fields don't take precedence over replacement fields when both are specified.
+message: >
+  Fixed an issue with deprecated shorthand fields so that
+  they don't take precedence over replacement fields when both are specified.
 type: bugfix
 scope: Core
