--- a/changelog/3.8.0/kong/fix-propagation-remove-redundant-warnings.yml
+++ b/changelog/3.8.0/kong/fix-propagation-remove-redundant-warnings.yml
@@ -1,3 +1,4 @@
-message: "**OpenTelemetry / Zipkin**: remove redundant deprecation warnings"
+message: >
+  **OpenTelemetry and Zipkin**: Removed redundant deprecation warnings.
 type: bugfix
 scope: Plugin
