--- a/changelog/3.8.0/kong/ai-plugin-read-file.yml
+++ b/changelog/3.8.0/kong/ai-plugin-read-file.yml
@@ -1,3 +1,5 @@
-message: "allow AI plugin to read request from buffered file" 
+message: >
+  **AI-proxy-plugin**: Added the `allow_override` option to allow overriding
+  the upstream model auth parameter or header from the caller's request.
 type: feature
 scope: "Plugin"
