--- a/changelog/3.8.0/kong/ai-proxy-fix-nil-response-token-count.yml
+++ b/changelog/3.8.0/kong/ai-proxy-fix-nil-response-token-count.yml
@@ -1,5 +1,4 @@
 message: |
-  **AI-proxy-plugin**: Fixed a bug where using "OpenAI Function" inference requests would log a 
-  request error, and then hang until timeout.
+  **AI-proxy**: Fixed an issue where using OpenAI Function inference requests would log a request error, and then hang until timeout.
 scope: Plugin
 type: bugfix
