--- a/changelog/3.8.0/kong/ai-proxy-mistral-ai.yml
+++ b/changelog/3.8.0/kong/ai-proxy-mistral-ai.yml
@@ -1,3 +1,4 @@
-message: '**ai-proxy**: Allowed mistral provider to use mistral.ai managed service by omitting upstream_url'
+message: >
+  **ai-proxy**: The Mistral provider can now use mistral.ai-managed services by omitting the `upstream_url`.
 type: feature
 scope: Plugin
