--- a/changelog/3.8.0/kong/ai-proxy-model-header.yml
+++ b/changelog/3.8.0/kong/ai-proxy-model-header.yml
@@ -1,3 +1,4 @@
-message: '**ai-proxy**: Added a new response header X-Kong-LLM-Model that displays the name of the language model used in the AI-Proxy plugin.'
+message: >
+  **ai-proxy**: Added the new response header `X-Kong-LLM-Model`, which displays the name of the language model used in the AI Proxy plugin.
 type: feature
 scope: Plugin
