--- a/changelog/3.8.0/kong/bump-pcre.yml
+++ b/changelog/3.8.0/kong/bump-pcre.yml
@@ -1,3 +1,3 @@
-message: "Bumped PCRE2 to 10.44 to fix some bugs and tidy-up the release (nothing important)"
+message: "Bumped PCRE2 to 10.44 to fix some bugs and tidy up the release."
 type: dependency
 scope: Core
