--- a/changelog/3.8.0/kong/feat-response-transformer-json-rename.yml
+++ b/changelog/3.8.0/kong/feat-response-transformer-json-rename.yml
@@ -1,4 +1,4 @@
 message: |
-  Added support for json_body rename in response-transformer plugin
+  **response-transformer**: Added support for `json_body` rename.
 type: feature
 scope: Plugin
