--- a/changelog/3.8.0/kong/fix-acme-misleading-deprecation-logs.yml
+++ b/changelog/3.8.0/kong/fix-acme-misleading-deprecation-logs.yml
@@ -1,3 +1,5 @@
-message: "**ACME**: Fixed an issue of DP reporting that deprecated config fields are used when configuration from CP is pushed"
+message: >
+  **ACME**: Fixed an issue where the DP would report that deprecated
+  config fields were used when configuration was pushed from the CP.
 type: bugfix
 scope: Plugin
