--- a/changelog/3.8.0/kong/fix-ai-gzip-content.yml
+++ b/changelog/3.8.0/kong/fix-ai-gzip-content.yml
@@ -1,4 +1,4 @@
 message: |
-   **AI-Proxy**: Fixed issue when response is gzipped even if client doesn't accept.
+   **AI-Proxy**: Fixed issue when response was gzipped even if the client didn't accept the format.
 type: bugfix
 scope: Plugin
