--- a/changelog/3.8.0/kong/fix-ai-proxy-shared-state.yml
+++ b/changelog/3.8.0/kong/fix-ai-proxy-shared-state.yml
@@ -1,3 +1,4 @@
-message: "**AI-Proxy**: Resolved a bug where the object constructor would set data on the class instead of the instance"
+message: >
+  **AI-Proxy**: Resolved an issue where the object constructor would set data on the class instead of the instance.
 type: bugfix
 scope: Plugin
