--- a/changelog/3.8.0/kong/fix-aws-lambda-empty-array-mutli-value.yml
+++ b/changelog/3.8.0/kong/fix-aws-lambda-empty-array-mutli-value.yml
@@ -1,3 +1,5 @@
-message: "**AWS-Lambda**: Fixed an issue that the plugin does not work with multiValueHeaders defined in proxy integration and legacy empty_arrays_mode."
+message: >
+  **AWS-Lambda**: Fixed an issue where the plugin didn't work with multiValueHeaders
+  defined in proxy integration and legacy `empty_arrays_mode`.
 type: bugfix
 scope: Plugin
