--- a/changelog/3.8.0/kong/fix-clustering-forward-proxy-authentication.yml
+++ b/changelog/3.8.0/kong/fix-clustering-forward-proxy-authentication.yml
@@ -1,3 +1,6 @@
-message: Fixed an issue where hybrid mode not working if the forward proxy password contains special character(#). Note that the `proxy_server` configuration parameter still needs to be url-encoded.
+message: >
+  Fixed an issue where hybrid mode wasn't working
+  if the forward proxy password contained the special character `#`.
+  Note that the `proxy_server` configuration parameter still needs to be url-encoded.
 type: bugfix
 scope: Clustering
