--- a/changelog/3.8.0/kong/fix-otel-migrations-exception.yml
+++ b/changelog/3.8.0/kong/fix-otel-migrations-exception.yml
@@ -1,3 +1,4 @@
-message: "**OpenTelemetry:** Fixed an issue where migration fails when upgrading from below version 3.3 to 3.7."
+message: >
+  **OpenTelemetry:** Fixed an issue where migration failed when upgrading from below version 3.3 to 3.7.
 type: bugfix
 scope: Plugin
