--- a/changelog/3.8.0/kong/fix-realm-compat-changes-key-auth.yml
+++ b/changelog/3.8.0/kong/fix-realm-compat-changes-key-auth.yml
@@ -1,3 +1,5 @@
-message: "**Key-Auth**: Fix an issue of realm field not recognized for older kong versions (before 3.7)"
+message: >
+  **Key-Auth**: Fixed an issue where the realm field wasn't
+  recognized for older Kong Gateway versions (before 3.7).
 type: bugfix
 scope: Plugin
