--- a/changelog/3.8.0/kong/fix-request-size-limiting-with-chunked-transfer-encoding-and-no-content-length.yml
+++ b/changelog/3.8.0/kong/fix-request-size-limiting-with-chunked-transfer-encoding-and-no-content-length.yml
@@ -1,3 +1,5 @@
-message: "**Request Size Limiting**: Fixed an issue where the body size doesn't get checked when the request body is buffered to a temporary file."
+message: >
+  **Request Size Limiting**: Fixed an issue where the body size
+  didn't get checked when the request body was buffered to a temporary file.
 type: bugfix
 scope: Plugin
