--- a/changelog/3.8.0/kong/fix-vault-reference-parsing-endslash.yml
+++ b/changelog/3.8.0/kong/fix-vault-reference-parsing-endslash.yml
@@ -1,4 +1,4 @@
 message: |
-   **Vault**: Reference ending with slash when parsed should not return a key.
+   **Vault**: References ending with a slash, when parsed, will no longer return a key.
 type: bugfix
 scope: PDK
