--- a/changelog/3.8.0/kong/hmac_www_authenticate.yml
+++ b/changelog/3.8.0/kong/hmac_www_authenticate.yml
@@ -1,3 +1,4 @@
-message: "**hmac-auth**: Add WWW-Authenticate headers to 401 responses."
+message: >
+  **hmac-auth**: Added WWW-Authenticate headers to 401 responses.
 type: bugfix
 scope: Plugin
