--- a/changelog/3.8.0/kong/jwt_www_authenticate.yml
+++ b/changelog/3.8.0/kong/jwt_www_authenticate.yml
@@ -1,3 +1,4 @@
-message: "**jwt**: Add WWW-Authenticate headers to 401 responses."
+message: >
+  **jwt**: Added WWW-Authenticate headers to 401 responses.
 type: bugfix
 scope: Plugin
