--- a/changelog/3.8.0/kong/ldap_www_authenticate.yml
+++ b/changelog/3.8.0/kong/ldap_www_authenticate.yml
@@ -1,3 +1,4 @@
-message: "**ldap-auth**: Add WWW-Authenticate headers to all 401 responses."
+message: >
+  **ldap-auth**: Added WWW-Authenticate headers to all 401 responses.
 type: bugfix
 scope: Plugin
