--- a/changelog/3.8.0/kong/pdk-read-file.yml
+++ b/changelog/3.8.0/kong/pdk-read-file.yml
@@ -1,3 +1,3 @@
-message: "extend kong.request.get_body and kong.request.get_raw_body to read from buffered file"
+message: "Extended `kong.request.get_body` and `kong.request.get_raw_body` to read from buffered files."
 type: feature
 scope: "PDK"
