--- a/changelog/3.8.0/kong/resty-simdjson.yml
+++ b/changelog/3.8.0/kong/resty-simdjson.yml
@@ -1,5 +1,5 @@
 message: |
   Introduced a yieldable JSON library `lua-resty-simdjson`,
-  which would improve the latency significantly.
+  which significantly improves latency.
 type: dependency
 scope: Core
