--- a/changelog/3.8.0/kong/revert-dns-behavior.yml
+++ b/changelog/3.8.0/kong/revert-dns-behavior.yml
@@ -1,4 +1,5 @@
-message: "Reverted DNS client to original behaviour of ignoring ADDITIONAL SECTION in DNS responses."
+message: >
+  Reverted the DNS client to the original behavior of ignoring ADDITIONAL SECTION in DNS responses.
 type: bugfix
 scope: Core
 
