--- a/changelog/3.8.0/kong/shorten-socket-names.yml
+++ b/changelog/3.8.0/kong/shorten-socket-names.yml
@@ -1,3 +1,3 @@
-message: Shorten names of internal Unix sockets to avoid exceeding the socket name limit.
+message: Shortened names of internal Unix sockets to avoid exceeding the socket name limit.
 type: bugfix
 scope: Core
