--- a/changelog/unreleased/kong/fix-return-values-mistaken-in-rate-limiting-plugin.yml
+++ b/changelog/unreleased/kong/fix-return-values-mistaken-in-rate-limiting-plugin.yml
@@ -1,3 +1,3 @@
-message: **Rate-limiting-Plugin**: Fix a bug where the return values from `get_redis_connection()` are mistaken.
+message: "**Rate-limiting-Plugin**: Fix a bug where the return values from `get_redis_connection()` are mistaken."
 scope: Plugin
 type: bugfix
