--- a/.github/matrix-commitly.yml
+++ b/.github/matrix-commitly.yml
@@ -4,12 +4,19 @@ build-packages:
   image: ubuntu:24.04
   package: deb
   check-manifest-suite: ubuntu-24.04-amd64
+- label: ubuntu-24.04-arm64
+  image: ubuntu:24.04
+  package: deb
+  bazel-args: --platforms=//:generic-crossbuild-aarch64
+  check-manifest-suite: ubuntu-24.04-arm64
 
 build-images:
 - label: ubuntu
   base-image: ubuntu:24.04
   package: deb
   artifact-from: ubuntu-24.04
+  artifact-from-alt: ubuntu-24.04-arm64
+  docker-platforms: linux/amd64, linux/arm64
   check-manifest-suite: docker-image-ubuntu-24.04
 
 smoke-tests:
